updating readme file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
             rel="stylesheet"
         />
+        <!-- vercel analytics -->
+        <script>
+            window.va =
+                window.va ||
+                function () {
+                    (window.vaq = window.vaq || []).push(arguments);
+                };
+        </script>
+        <script defer src="/_vercel/insights/script.js"></script>
+
         <title>Kasper Template One</title>
     </head>
     <body>
